fix: remove opacity from Header styles for improved visibility

--- a/src/app/components/Header.module.scss
+++ b/src/app/components/Header.module.scss
@@ -40,7 +40,6 @@ $breakpoint-small: 768px;
     margin: 0 auto;
     width: 100%;
     padding: 0 $spacing-medium; /* Añadido padding horizontal */
-    opacity: 90%; /* 90% de opacidad */
 }
 
 /* Secciones Izquierda y Derecha */
